--- a/D2/W1-P2-Esercizi-Flex-Assets/style.css
+++ b/D2/W1-P2-Esercizi-Flex-Assets/style.css
@@ -106,7 +106,7 @@ button {
   font-weight: bold;
 }
 
-@media only screen and (min-width: 480px) {
+@media only screen and (min-width: 480px) and (max-width: 600px) {
   .box {
     position: relative;
     top: 50vh;
